[1.15.2] test error _test_team_config_sync: assertion failed: (found)
Building 1.15.2 on the current Ubuntu serie, one of the tests is failing on i386 [1]
/libnm/settings/team/sync_watcher_from_config_nsna_ping: **
test:ERROR:libnm-core/tests/test-setting.c:1012:_test_team_config_sync: assertion failed: (found)
#0 0xb7fd5c31 in __kernel_vsyscall ()
#1 0xb7884512 in raise () at /lib/i386-linux-gnu/libc.so.6
#2 0xb786e2b6 in abort () at /lib/i386-linux-gnu/libc.so.6
#3 0xb7a74dd4 in g_assertion_message
(domain=0x4bb02e "test", file=0x4bb954 "libnm-core/tests/test-setting.c", line=1012, func=0x4c001c <__func__.34149> "_test_team_config_sync", message=0x52e040 "assertion failed: (found)") at ../../../../glib/gtestutils.c:2596
lstr = "1012\000\340R\000\065\021\260\267\000\000\000\000\000\000\000\000G\341\252\267\206\207\254\267\030L\271\267"
s = 0x529e60 "`\030T"
#4 0xb7ad0c3c in g_assertion_message_expr
(domain=0x4bb02e "test", file=0x4bb954 "libnm-core/tests/test-setting.c", line=1012, func=0x4c001c <__func__.34149> "_test_team_config_sync", expr=0x4bd2c3 "found") at ../../../../glib/gtestutils.c:2619
s = 0x52e040 "assertion failed: (found)"
#5 0x00427e7f in _test_team_config_sync
(team_config=0x4bd638 "{\"link_watch\": {\"name\": \"nsna_ping\", \"target_host\": \"target.host\"}}", notify_peer_count=0, notify_peers_interval=0, mcast_rejoin_count=0, mcast_rejoin_interval=0, runner=0x4bd349 "roundrobin", runner_hwaddr_policy=0x0, runner_tx_hash=0x0, runner_tx_balancer=0x0, runner_tx_balancer_interval=-1, runner_active=0, runner_fast_rate=0, runner_sys_prio=-1, runner_min_ports=-1, runner_agg_select_policy=0x0, link_watchers=0x540c60)
at libnm-core/tests/test-setting.c:1012
s_team = 0x531ca0 [NMSettingTeam]
i = 0
j = 1
found = 0
__func__ = "_test_team_config_sync"
#6 0x0042840b in test_watcher_nsna_ping_sync_from_config ()
at libnm-core/tests/test-setting.c:1158
link_watchers = 0x540c60
#7 0xb7ad06b7 in test_case_run (tc=0x526880)
at ../../../../glib/gtestutils.c:2318
largs = {0, 0, 7.99999999999999999996e-05}
fixture = 0x0
old_base = 0x0
old_free_list = 0x0
filename_free_list = 0x0
success = 0
tc = 0x526880
n_bad = 0
old_name = 0x522510 "/libnm/settings/team"
iter = 0x50cc58 = {0x526880, 0x526898, 0x5268b0}