libnm-core: fix team link-watcher struct layout

As the comment above the union says, structs in the union must have
the same layout of arp_ping. 'vlanid' is in the wrong place and breaks
that.

Fixes: f44c793f6cd89c3e84e83872478daf286821ed64

https://gitlab.freedesktop.org/NetworkManager/NetworkManager/issues/110